Added new features

--- a/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
+++ b/app/src/main/res/layout/fragment_club_manager_create_form_page.xml
@@ -141,7 +141,7 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:paddingLeft="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -173,7 +173,7 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:paddingLeft="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -204,7 +204,7 @@
                 android:background="@drawable/normal_background"
                 android:ems="10"
                 android:fontFamily="@font/poppins"
-                android:inputType="text"
+                android:inputType="textMultiLine"
                 android:paddingLeft="8dp"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
