--- a/app/src/main/res/layout/fragment_club_manager_register.xml
+++ b/app/src/main/res/layout/fragment_club_manager_register.xml
@@ -79,7 +79,7 @@
         android:fontFamily="@font/poppins"
         android:hint="Password"
         android:drawablePadding="8dp"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingLeft="8dp"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
         android:fontFamily="@font/poppins"
         android:hint="Confirm password"
         android:drawablePadding="8dp"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingLeft="8dp"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
