--- a/app/src/main/res/layout/fragment_club_manager.xml
+++ b/app/src/main/res/layout/fragment_club_manager.xml
@@ -46,7 +46,7 @@
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
