--- a/app/src/main/res/layout/fragment_sks_admin_profile.xml
+++ b/app/src/main/res/layout/fragment_sks_admin_profile.xml
@@ -19,31 +19,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:src="@drawable/settings_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
         android:id="@+id/imageView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_width="157dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="124dp"
+        android:background="@drawable/circular_background"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@drawable/sks_icon" />
 
     <TextView
         android:id="@+id/textView27"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="122dp"
-        android:text="Health Cultur Sport (HCB)"
+        android:text="Health Culture Sport (HCB)"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView14"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
@@ -62,11 +56,36 @@
 
     <TextView
         android:id="@+id/textView29"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Description"
+        android:layout_marginEnd="32dp"
+        android:inputType="textMultiLine"
+        android:text="Welcome to the Health Culture Sport (HCS) Club! Our mission is to empower individuals and communities to thrive by providing opportunities for learning, collaboration, and personal development within the realms of health, culture, and sports. Committed to fostering an inclusive environment where every voice is valued, and every member is supported in achieving their aspirations, HCS strives to promote a holistic approach to well-being. Through our dedication to inclusivity, collaboration, and continuous improvement, we aim to create a supportive community where individuals can cultivate their passions, embrace diversity, and lead healthy, fulfilling lives. Join us at HCS and embark on a journey of growth, connection, and positive change!"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView28" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button8"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:background="@null"
+        android:drawableRight="@drawable/logout_button_icon"
+        android:paddingRight="10dp"
+        android:text="Log Out"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="______________________________________________________"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView26" />
 </androidx.constraintlayout.widget.ConstraintLayout>
