--- a/app/src/main/res/layout/fragment_student_calendar_info.xml
+++ b/app/src/main/res/layout/fragment_student_calendar_info.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.clubManager.ClubManagerCalendarInfoActivity">
+    tools:context=".ui.home.student.StudentCalendarInfoFragment">
 
     <ImageView
-        android:id="@+id/iw_activity_image"
+        android:id="@+id/student_club_info_detail_photo"
         android:layout_width="350dp"
         android:layout_height="350dp"
         android:layout_marginStart="32dp"
@@ -24,144 +24,124 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="18dp"
         android:fontFamily="@font/poppins"
-        android:text="Date"
-        android:textSize="13sp"
+        android:text="Start Date"
+        android:textSize="16dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView62" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_web_contacts" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="120dp"
         android:fontFamily="@font/poppins"
-        android:text="Time"
-        android:textSize="13sp"
+        android:text="End Date"
+        android:textSize="16dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageView16"
-        app:layout_constraintTop_toBottomOf="@+id/tw_date" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_web_contacts" />
 
     <TextView
         android:id="@+id/textView51"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins"
-        android:text="Location/Web platform"
-        android:textSize="13sp"
+        android:text="Location"
+        android:textSize="16dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView62" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView67" />
 
     <TextView
         android:id="@+id/textView52"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="120dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="@font/poppins"
         android:text="Contacts"
-        android:textSize="13sp"
+        android:textSize="16dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tw_location_web_platform" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_web_platform" />
 
     <TextView
         android:id="@+id/textView55"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="124dp"
         android:fontFamily="@font/poppins"
         android:text="Description"
-        android:textSize="13sp"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tw_time" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView62" />
 
     <TextView
-        android:id="@+id/tw_date"
+        android:id="@+id/sks_admin_club_info_detail_start_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/normal_background"
         android:backgroundTint="#BDDCEA"
-        android:textSize="11sp"
         android:fontFamily="@font/poppins"
         android:paddingLeft="4dp"
         android:paddingTop="2dp"
         android:paddingRight="4dp"
-        android:text="May 11, 2024"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        android:text="12/04/2024"
+        android:textSize="11sp"
+        app:layout_constraintStart_toEndOf="@+id/textView7"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_web_contacts" />
 
     <TextView
-        android:id="@+id/tw_time"
+        android:id="@+id/sks_admin_club_info_detail_end_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/normal_background"
+        android:backgroundTint="#BDDCEA"
+        android:fontFamily="@font/poppins"
+        android:paddingLeft="4dp"
+        android:paddingTop="2dp"
+        android:paddingRight="4dp"
+        android:text="12/04/2024"
+        android:textSize="11sp"
+        app:layout_constraintStart_toEndOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_web_contacts" />
+
+    <TextView
+        android:id="@+id/sks_admin_club_info_detail_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="33dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/normal_background"
-        android:backgroundTint="#BDDCEA"
-        android:textSize="11sp"
         android:fontFamily="@font/poppins"
-        android:paddingLeft="4dp"
-        android:paddingTop="2dp"
-        android:paddingRight="4dp"
-        android:text="1.00 PM - 3.00 PM"
+        android:text="Okul"
+        android:textSize="11sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-    <TextView
-        android:id="@+id/tw_location_web_platform"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/poppins"
-        android:text="Zoom"
-        android:textSize="11sp"
-        app:layout_constraintStart_toEndOf="@+id/tw_date"
         app:layout_constraintTop_toBottomOf="@+id/textView51" />
 
     <TextView
-        android:id="@+id/tw_contacts"
+        android:id="@+id/sks_admin_club_info_detail_web_contacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="80dp"
         android:fontFamily="@font/poppins"
         android:text="+90 555 325 23 23"
         android:textSize="11sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView52" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView62"
-        app:srcCompat="@drawable/icon_date" />
-
-    <ImageView
-        android:id="@+id/imageView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tw_date"
-        app:srcCompat="@drawable/email_icon" />
 
     <ImageView
         android:id="@+id/imageView17"
@@ -184,20 +164,17 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iw_activity_image" />
+        app:layout_constraintTop_toBottomOf="@+id/student_club_info_detail_photo" />
 
     <TextView
-        android:id="@+id/tw_content"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/sks_admin_club_info_detail_decsription"
+        android:layout_width="190dp"
+        android:layout_height="194dp"
+        android:layout_marginStart="204dp"
+        android:layout_marginEnd="32dp"
         android:fontFamily="@font/poppins"
+        android:text="Indulge in the enchanting world of poetry at our upcoming event, &quot;Poetry Hour: A Celebration of Verses,&quot; hosted by the Literature Club. Join fellow poetry enthusiasts for an evening filled with captivating recitations, insightful discussions, and heartfelt expressions of creativity."
         android:textSize="11sp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:text="asddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView55" />
@@ -206,30 +183,31 @@
         android:id="@+id/textView64"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/poppins"
         android:text="Activities"
-        android:textSize="17sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tw_activity_manager"
+        android:id="@+id/sks_admin_club_info_detail_manager"
         android:layout_width="0dp"
-        android:gravity="center"
-        android:textSize="13sp"
-        android:fontFamily="@font/poppins"
-        android:background="#20220234"
         android:layout_height="100dp"
+        android:background="#20220234"
+        android:fontFamily="@font/poppins"
+        android:gravity="center"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/iw_activity_image"
-        app:layout_constraintEnd_toEndOf="@+id/iw_activity_image"
-        app:layout_constraintStart_toStartOf="@+id/iw_activity_image" />
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/student_club_info_detail_photo"
+        app:layout_constraintEnd_toEndOf="@+id/student_club_info_detail_photo"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/student_club_info_detail_photo" />
 
     <TextView
-        android:id="@+id/tw_activity_title"
+        android:id="@+id/sks_admin_club_info_detail_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="72dp"
@@ -238,10 +216,10 @@
         android:text="TextView"
         android:textSize="17sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/iw_activity_image"
-        app:layout_constraintEnd_toEndOf="@+id/iw_activity_image"
+        app:layout_constraintBottom_toBottomOf="@+id/student_club_info_detail_photo"
+        app:layout_constraintEnd_toEndOf="@+id/student_club_info_detail_photo"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/iw_activity_image" />
+        app:layout_constraintStart_toStartOf="@+id/student_club_info_detail_photo" />
 
     <TextView
         android:id="@+id/textView67"
@@ -252,5 +230,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iw_activity_image" />
+        app:layout_constraintTop_toBottomOf="@+id/student_club_info_detail_photo" />
+
+    <TextView
+        android:id="@+id/textView82"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins"
+        android:text="Web Platform"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sks_admin_club_info_detail_location" />
+
+    <TextView
+        android:id="@+id/sks_admin_club_info_detail_web_platform"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:text="Zoom"
+        android:textSize="11sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView82" />
 </androidx.constraintlayout.widget.ConstraintLayout>
